# qalam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: embedded_files.rs  home.rs  main.rs  posts.rs  projects.rs  utils.rs
syntax-themes/: swamp-dark.tmTheme  swamp-light.tmTheme
themes/: styles.css
