[package]
name = "qalam"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.102"
camino = "1.2.2"
chrono = "0.4.44"
gray_matter = {version="0.3.2", features = ["toml"]}
itertools = "0.14.0"
maud = "0.27.0"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
toml = "1.1.2"
